# Re-ReSearch-new-

./: .env  .gitignore  README.md  STATUS.md  implementation_plan.md  pyproject.toml  requirements.txt  results.md
backend/: __init__.py  config.py
backend/agent/: __init__.py  graph.py  nodes.py  runner.py  search_providers.py  state.py  tools.py
backend/api/: __init__.py  app.py
backend/api/routers/: agent.py  chat.py  ingest.py  nodes.py  projects.py  (+1 more)
backend/db/: __init__.py  chat.py  connection.py  edges.py  migrations.py  models.py  nodes.py  projects.py  schema.sql  search.py
backend/rag/: __init__.py  chat.py  chunker.py  embedder.py  ingestor.py  pdf_ingestor.py  recall.py
backend/scraper/: __init__.py  extractor.py  fetcher.py  models.py
cli/: context.py  editor.py  main.py  rendering.py
cli/commands/: agent.py  draft.py  library.py  map.py  project.py
docs/: CHAT_IMPLEMENTATION_PLAN.md  DOCS_AI_CORE.md  DOCS_BACKEND.md  DOCS_CLI_DESIGN.md  DOCS_FRONTEND.md  DOCS_FRONTEND_DESIGN.md  FRONTEND_IMPLEMENTATION_PLAN.md  concept.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  test-setup.ts  test-utils.tsx
tests/: test_agent.py  test_api_chat.py  test_api_projects.py  test_chat_db.py  test_chat_rag.py  test_cli_agent.py  test_cli_context.py  test_cli_draft.py  test_cli_library.py  test_cli_map.py  test_cli_project.py  test_db.py  test_projects.py  test_rag.py  test_scraper.py  test_search_providers.py
(+68 files in other folders)
